--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A simple vuejs Hello World plugin",
   "version": "0.1.5",
   "private": false,
+  "main": ".dist/vue-hello-world-simple.common.js",
   "author": {
     "name": "Mohaddsw",
     "email": "mhds.rahimi@gmail.com"
@@ -11,8 +12,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple ./src/install.js",
-    "main": ".dist/vue-hello-world-simple.common.js"
+    "build-library": "vue-cli-service build --target lib --name vue-hello-world-simple ./src/install.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
